# mcp-market-research

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md  SECURITY.md  pyproject.toml
.claude/: context.md  decisions.md  handoff.md  todo.md
.github/workflows/: ci.yml
benchmark/: PROMPTS-FOR-CLAUDE-WEB.md  README.md  RESULTS.md
benchmark/claude-code/: 01-nvda.md  02-infra-energia-ia.md  03-macro-h2-2026.md
benchmark/claude-web/: 01-nvda.md  02-infra-energia-ia.md  03-macro-h2-2026.md
docs/: tool-brainstorm.md
src/scout/: __init__.py  analytics.py  config.py  healthcheck.py
src/scout/adapters/: __init__.py  price_fallback.py  retry.py
src/scout/domain/: __init__.py  models.py  ports.py
src/scout/research/: __init__.py  batch.py  comparison.py  correlation.py  crypto.py  dossier.py  notes.py  relative_strength.py  sectors.py
tests/: test_alternative_fear_greed.py  test_analytics.py  test_apewisdom.py  test_btc_network.py  test_ccxt_market_data.py  test_ccxt_premium_peg.py  test_cftc_positioning.py  test_coingecko_macro.py  test_coinpaprika.py  test_cointegration.py  test_commodity_ratios.py  test_crypto_research.py  test_defillama.py  test_deribit_vol.py  test_derivatives.py  test_dossier.py  test_fred_macro.py  test_gdelt.py  test_mcp_transport.py  test_models.py  test_onchain.py  test_openfda_events.py  test_research.py  test_retry.py  test_sec_edgar.py  test_server.py  test_stooq_fallback.py  test_web_extractor.py  test_wikimedia.py  test_worldbank_treasury.py  test_yfinance_market_data.py
(+51 files in other folders)
