[project]
name = "mcp-market-research"
version = "0.5.2"
description = "Scout — an MCP server that gathers and structures financial data for AI trading agents (snapshots, fundamentals, dividends, and more). Stateless; pairs with agentic-trading-mcp."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pedro Braiti" }]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "ccxt>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pandas>=2.2",
]

[project.scripts]
mcp-market-research = "scout.server.app:main"
scout-healthcheck = "scout.healthcheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
